--- a/package.json
+++ b/package.json
@@ -9,10 +9,28 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-navigation/bottom-tabs": "^6.4.3",
+    "@react-navigation/drawer": "^6.5.3",
+    "@react-navigation/native": "^6.0.16",
+    "@react-navigation/native-stack": "^6.9.4",
+    "@reduxjs/toolkit": "^1.9.1",
+    "axios": "^1.2.1",
     "expo": "~47.0.8",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "^0.70.5",
+    "react-native-gesture-handler": "~2.8.0",
+    "react-native-paper": "^5.0.1",
+    "react-native-reanimated": "~2.12.0",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
+    "react-navigation": "^4.4.4",
+    "react-redux": "^8.0.5",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22",
+    "redux": "^4.2.0",
+    "redux-toolkit": "^1.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
