--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-screens": "~3.18.0",
     "react-native-select-dropdown": "^3.1.0",
     "react-native-vector-icons": "^9.2.0",
+    "react-native-webview": "11.23.1",
     "react-navigation": "^4.4.4",
     "react-redux": "^8.0.5",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22",
