--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "@react-navigation/bottom-tabs": "^6.4.3",
     "@react-navigation/drawer": "^6.5.3",
     "@react-navigation/native": "^6.1.1",
+
+    "@react-navigation/drawer": "^6.5.5",
+    "@react-navigation/native": "^6.0.16",
+
     "@react-navigation/native-stack": "^6.9.4",
     "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.1",
@@ -25,6 +29,9 @@
     "react-native-gesture-handler": "~2.8.0",
     "react-native-paper": "^5.0.2",
     "react-native-picker-select": "^8.0.4",
+
+    "react-native-paper": "^5.0.1",
+
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "~3.18.0",
